--- a/LocalMind-Backend/package.json
+++ b/LocalMind-Backend/package.json
@@ -1,14 +1,18 @@
 {
   "name": "localmind-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest",
     "start-tunnel": "lt --port 5000",
     "setup:backend": "ts-node src/script/project-setup.ts",
-    "format": "prettier --write .",
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "repository": {
     "type": "git",
@@ -23,16 +27,21 @@
   "description": "",
   "devDependencies": {
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/js": "^9.17.0",
     "@types/argon2": "^0.15.4",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
     "@types/nodemailer": "^7.0.3",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.14.0",
     "jest": "^30.2.0",
-    "prettier": "3.6.2",
+    "prettier": "^3.4.2",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.18.2"
   },
   "dependencies": {
     "@jest/globals": "^30.2.0",
