Update: Update Backend Auth Module for Signup Flow (Model, Controller, Validator, Types)

--- a/LocalMind-Backend/package.json
+++ b/LocalMind-Backend/package.json
@@ -27,6 +27,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.2",
     "@types/nodemailer": "^7.0.3",
+    "@types/bcrypt": "^5.0.2",
     "jest": "^30.2.0",
     "prettier": "3.6.2",
     "ts-jest": "^29.4.5",
@@ -46,6 +47,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "argon2": "^0.44.0",
+    "bcrypt": "^5.1.1",
     "axios": "^1.12.2",
     "chalk": "^5.6.2",
     "cloudflared-tunnel": "^1.0.3",
