--- a/LocalMind-Backend/package.json
+++ b/LocalMind-Backend/package.json
@@ -8,6 +8,7 @@
     "setup:backend": "ts-node src/script/project-setup.ts",
     "format": "prettier --write .",
     "build": "tsc",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "repository": {
