--- a/LocalMind-Backend/.env.example
+++ b/LocalMind-Backend/.env.example
@@ -45,3 +45,7 @@ BACKEND_URL=http://localhost:5000
 OPENAI_API_KEY=your_openai_api_key_here
 GOOGLE_API_KEY=your_google_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
+
+# Ollama Configuration (Local LLM)
+OLLAMA_HOST=http://localhost:11434
+OLLAMA_DEFAULT_MODEL=llama3
