--- a/LocalMind-Backend/.env.example
+++ b/LocalMind-Backend/.env.example
@@ -43,5 +43,6 @@ BACKEND_URL=http://localhost:5000
 
 # Model Api keys
 OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4o-mini
 GOOGLE_API_KEY=your_google_api_key_here
 GROQ_API_KEY=your_groq_api_key_here
