--- a/LocalMind-Backend/package.json
+++ b/LocalMind-Backend/package.json
@@ -50,12 +50,12 @@
     "@langchain/google-genai": "^0.2.18",
     "@langchain/groq": "^0.2.4",
     "@langchain/ollama": "^0.2.4",
+    "@langchain/openai": "^1.2.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "argon2": "^0.44.0",
-    "bcrypt": "^5.1.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
