--- a/LocalMind-Backend/package.json
+++ b/LocalMind-Backend/package.json
@@ -54,8 +54,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "argon2": "^0.44.0",
-    "bcrypt": "^5.1.1",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
@@ -69,9 +69,11 @@
     "langchain": "^0.3.36",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "ngrok": "5.0.0-beta.2",
     "nodemailer": "^7.0.10",
     "ora": "^9.0.0",
+    "pdf-parse": "^2.4.5",
     "zod": "^4.1.12"
   }
 }
