--- a/env.example
+++ b/env.example
@@ -12,6 +12,7 @@ APP_ENV=development
 DEBUG=true
 LOG_LEVEL=debug
 BACKEND_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:5173
 
 # ============================================
 # Admin Credentials (Required)
