--- a/.github/ ISSUE_TEMPLATE/config.yml
+++ b/.github/ ISSUE_TEMPLATE/config.yml
@@ -1,10 +1,17 @@
 blank_issues_enabled: false
 
 contact_links:
-  - name: 💬 Discussions
-    url: https://github.com/USERNAME/REPO/discussions
-    about: Ask questions or start discussions here
+  - name: 💬 GitHub Discussions
+    url: https://github.com/NexGenStudioDev/LocalMind/discussions
+    about: |
+      Ask questions, share ideas, or start a discussion with the community.
 
   - name: 📖 Documentation
-    url: https://github.com/USERNAME/REPO/wiki
-    about: Check the documentation before opening an issue
+    url: https://github.com/NexGenStudioDev/LocalMind/wiki
+    about: |
+      Please check the documentation before opening an issue.
+
+  - name: 🚀 Feature Requests
+    url: https://github.com/NexGenStudioDev/LocalMind/discussions/categories/ideas
+    about: |
+      Have an idea or improvement? Propose it in the Ideas category.
